tests/snapshots/integration_test__let_bindings.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module LetDemo (
  input logic [7:0] a,
  input logic [7:0] b,
  output logic [7:0] masked,
  output logic equal
);

  logic [7:0] mask;
  logic same;
  assign mask = a & b;
  assign same = a == b;
  assign masked = mask;
  assign equal = same;

endmodule
