tests/snapshots/integration_test__lifo.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module LifoStack #(
  parameter int  DEPTH      = 16,
  parameter int  DATA_WIDTH = 8
) (
  input logic clk,
  input logic rst,
  input logic push_valid,
  output logic push_ready,
  input logic [DATA_WIDTH-1:0] push_data,
  output logic pop_valid,
  input logic pop_ready,
  output logic [DATA_WIDTH-1:0] pop_data,
  output logic full,
  output logic empty
);

  localparam int PTR_W = $clog2(DEPTH + 1);
  
  logic [DATA_WIDTH-1:0] mem [0:DEPTH-1];
  logic [PTR_W-1:0]     sp;
  
  assign full        = (sp == DEPTH[PTR_W-1:0]);
  assign empty       = (sp == '0);
  assign push_ready  = !full;
  assign pop_valid   = !empty;
  assign pop_data    = mem[sp - 1];
  
  always_ff @(posedge clk) begin
    if (rst) begin
      sp <= '0;
    end else begin
      if (push_valid && push_ready && pop_valid && pop_ready) begin
        // Simultaneous push+pop: replace top of stack
        mem[sp - 1] <= push_data;
      end else if (push_valid && push_ready) begin
        mem[sp] <= push_data;
        sp <= sp + 1;
      end else if (pop_valid && pop_ready) begin
        sp <= sp - 1;
      end
    end
  end
  
  // synopsys translate_off
  _auto_no_overflow: assert property (@(posedge clk) !(push_valid && push_ready && full))
    else $fatal(1, "FIFO OVERFLOW: LifoStack.push while full");
  _auto_no_underflow: assert property (@(posedge clk) !(pop_valid && pop_ready && empty))
    else $fatal(1, "FIFO UNDERFLOW: LifoStack.pop while empty");
  // synopsys translate_on

endmodule
