tests/snapshots/integration_test__linklist_basic_compiles.snap
---
source: tests/integration_test.rs
expression: sv
---
module TaskQueue #(
  parameter int  DEPTH = 8,
  parameter type DATA  = logic [31:0]
) (
  input  logic clk,
  input  logic rst,
  input  logic alloc_req_valid,
  output logic alloc_req_ready,
  output logic alloc_resp_valid,
  output logic [2:0] alloc_resp_handle,
  input  logic free_req_valid,
  output logic free_req_ready,
  input  logic [2:0] free_req_handle,
  input  logic delete_head_req_valid,
  output logic delete_head_req_ready,
  output logic delete_head_resp_valid,
  output DATA delete_head_resp_data,
  output logic empty,
  output logic full,
  output logic [3:0] length
);

  localparam int HANDLE_W = $clog2(DEPTH);
  localparam int CNT_W    = $clog2(DEPTH + 1);
  
  // Free list — circular FIFO of available slot indices
  logic [HANDLE_W-1:0] _fl_mem  [0:DEPTH-1];
  logic [CNT_W-1:0]    _fl_rdp;
  logic [CNT_W-1:0]    _fl_wrp;
  logic [CNT_W-1:0]    _fl_cnt;
  
  // Payload and link RAMs
  DATA                 _data_mem [0:DEPTH-1];
  logic [HANDLE_W-1:0] _next_mem [0:DEPTH-1];
  
  // Head / tail registers
  logic [HANDLE_W-1:0] _head_r;
  logic [HANDLE_W-1:0] _tail_r;
  
  // alloc controller registers
  logic _ctrl_alloc_resp_v;
  logic [2:0] _ctrl_alloc_resp_handle;
  
  // free controller registers
  
  // delete_head controller registers
  logic _ctrl_delete_head_busy;
  logic _ctrl_delete_head_resp_v;
  DATA _ctrl_delete_head_resp_data;
  logic [HANDLE_W-1:0] _ctrl_delete_head_slot;
  
  // Status outputs
  assign empty  = (_fl_cnt == CNT_W'(DEPTH));
  assign full   = (_fl_cnt == '0);
  assign length = CNT_W'(DEPTH) - _fl_cnt;
  
  // req_ready: combinational
  assign alloc_req_ready = !(_fl_cnt == '0);
  assign alloc_resp_valid = _ctrl_alloc_resp_v;
  assign alloc_resp_handle = _ctrl_alloc_resp_handle;
  assign free_req_ready = !(_fl_cnt == CNT_W'(DEPTH));
  assign delete_head_req_ready = !_ctrl_delete_head_busy && !(_fl_cnt == CNT_W'(DEPTH));
  assign delete_head_resp_valid = _ctrl_delete_head_resp_v;
  assign delete_head_resp_data = _ctrl_delete_head_resp_data;
  
  integer _ll_i;
  always_ff @(posedge clk) begin
    if (rst) begin
      for (_ll_i = 0; _ll_i < DEPTH; _ll_i++)
        _fl_mem[_ll_i] <= HANDLE_W'(_ll_i);
      _fl_rdp <= '0;
      _fl_wrp <= '0;
      _fl_cnt <= CNT_W'(DEPTH);
      _head_r <= '0;
      _tail_r <= '0;
      _ctrl_alloc_resp_v <= 1'b0;
      _ctrl_delete_head_busy <= 1'b0;
      _ctrl_delete_head_resp_v <= 1'b0;
    end else begin
      _ctrl_alloc_resp_v <= 1'b0;
      _ctrl_delete_head_resp_v <= 1'b0;
      
      // ── alloc ─────────────────────────────────────────
      if (alloc_req_valid && !(_fl_cnt == '0)) begin
        _fl_rdp <= _fl_rdp + 1'b1;
        _fl_cnt <= _fl_cnt - 1'b1;
        _ctrl_alloc_resp_v <= 1'b1;
        _ctrl_alloc_resp_handle <= _fl_mem[_fl_rdp[HANDLE_W-1:0]];
      end
      
      // ── free ─────────────────────────────────────────
      if (free_req_valid) begin
        _fl_mem[_fl_wrp[HANDLE_W-1:0]] <= free_req_handle;
        _fl_wrp <= _fl_wrp + 1'b1;
        _fl_cnt <= _fl_cnt + 1'b1;
      end
      
      // ── delete_head ─────────────────────────────────────────
      if (!_ctrl_delete_head_busy && delete_head_req_valid && !(_fl_cnt == CNT_W'(DEPTH))) begin
        _ctrl_delete_head_resp_data <= _data_mem[_head_r];
        _ctrl_delete_head_slot      <= _head_r;
        _ctrl_delete_head_busy <= 1'b1;
      end else if (_ctrl_delete_head_busy) begin
        _fl_mem[_fl_wrp[HANDLE_W-1:0]] <= _ctrl_delete_head_slot;
        _fl_wrp <= _fl_wrp + 1'b1;
        _fl_cnt <= _fl_cnt + 1'b1;
        _head_r <= _next_mem[_ctrl_delete_head_slot];
        _ctrl_delete_head_resp_v <= 1'b1;
        _ctrl_delete_head_busy <= 1'b0;
      end
      
    end
  end
  
endmodule
