tests/snapshots/integration_test__linklist_doubly_compiles.snap
---
source: tests/integration_test.rs
expression: sv
---
module SchedList #(
  parameter int  DEPTH = 4,
  parameter type DATA  = logic [7:0]
) (
  input  logic clk,
  input  logic rst,
  input  logic alloc_req_valid,
  output logic alloc_req_ready,
  output logic alloc_resp_valid,
  output logic [1:0] alloc_resp_handle,
  input  logic next_req_valid,
  input  logic [1:0] next_req_handle,
  output logic next_resp_valid,
  output logic [1:0] next_resp_handle,
  input  logic prev_req_valid,
  input  logic [1:0] prev_req_handle,
  output logic prev_resp_valid,
  output logic [1:0] prev_resp_handle,
  output logic empty,
  output logic full
);

  localparam int HANDLE_W = $clog2(DEPTH);
  localparam int CNT_W    = $clog2(DEPTH + 1);
  
  // Free list — circular FIFO of available slot indices
  logic [HANDLE_W-1:0] _fl_mem  [0:DEPTH-1];
  logic [CNT_W-1:0]    _fl_rdp;
  logic [CNT_W-1:0]    _fl_wrp;
  logic [CNT_W-1:0]    _fl_cnt;
  
  // Payload and link RAMs
  DATA                 _data_mem [0:DEPTH-1];
  logic [HANDLE_W-1:0] _next_mem [0:DEPTH-1];
  logic [HANDLE_W-1:0] _prev_mem [0:DEPTH-1];
  
  // Head / tail registers
  logic [HANDLE_W-1:0] _head_r;
  logic [HANDLE_W-1:0] _tail_r;
  
  // alloc controller registers
  logic _ctrl_alloc_resp_v;
  logic [1:0] _ctrl_alloc_resp_handle;
  
  // next controller registers
  logic _ctrl_next_resp_v;
  logic [1:0] _ctrl_next_resp_handle;
  
  // prev controller registers
  logic _ctrl_prev_resp_v;
  logic [1:0] _ctrl_prev_resp_handle;
  
  // Status outputs
  assign empty  = (_fl_cnt == CNT_W'(DEPTH));
  assign full   = (_fl_cnt == '0);
  
  // req_ready: combinational
  assign alloc_req_ready = !(_fl_cnt == '0);
  assign alloc_resp_valid = _ctrl_alloc_resp_v;
  assign alloc_resp_handle = _ctrl_alloc_resp_handle;
  assign next_resp_valid = _ctrl_next_resp_v;
  assign next_resp_handle = _ctrl_next_resp_handle;
  assign prev_resp_valid = _ctrl_prev_resp_v;
  assign prev_resp_handle = _ctrl_prev_resp_handle;
  
  integer _ll_i;
  always_ff @(posedge clk) begin
    if (rst) begin
      for (_ll_i = 0; _ll_i < DEPTH; _ll_i++)
        _fl_mem[_ll_i] <= HANDLE_W'(_ll_i);
      _fl_rdp <= '0;
      _fl_wrp <= '0;
      _fl_cnt <= CNT_W'(DEPTH);
      _head_r <= '0;
      _tail_r <= '0;
      _ctrl_alloc_resp_v <= 1'b0;
      _ctrl_next_resp_v <= 1'b0;
      _ctrl_prev_resp_v <= 1'b0;
    end else begin
      _ctrl_alloc_resp_v <= 1'b0;
      _ctrl_next_resp_v <= 1'b0;
      _ctrl_prev_resp_v <= 1'b0;
      
      // ── alloc ─────────────────────────────────────────
      if (alloc_req_valid && !(_fl_cnt == '0)) begin
        _fl_rdp <= _fl_rdp + 1'b1;
        _fl_cnt <= _fl_cnt - 1'b1;
        _ctrl_alloc_resp_v <= 1'b1;
        _ctrl_alloc_resp_handle <= _fl_mem[_fl_rdp[HANDLE_W-1:0]];
      end
      
      // ── next ─────────────────────────────────────────
      if (next_req_valid) begin
        _ctrl_next_resp_handle <= _next_mem[next_req_handle];
        _ctrl_next_resp_v <= 1'b1;
      end
      
      // ── prev ─────────────────────────────────────────
      if (prev_req_valid) begin
        _ctrl_prev_resp_handle <= _prev_mem[prev_req_handle];
        _ctrl_prev_resp_v <= 1'b1;
      end
      
    end
  end
  
endmodule
