tests/snapshots/integration_test__mixed_reset_and_no_reset.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module MixedReset (
  input logic clk,
  input logic rst,
  input logic [8-1:0] data_in,
  output logic [8-1:0] count_out,
  output logic [8-1:0] pipe_out
);

  logic [8-1:0] count_r = 0;
  logic [8-1:0] pipe_r = 0;
  always_ff @(posedge clk) begin
    if (rst) begin
      count_r <= 0;
    end else begin
      count_r <= 8'((count_r + 1));
    end
    pipe_r <= data_in;
  end
  assign count_out = count_r;
  assign pipe_out = pipe_r;

endmodule
