tests/snapshots/integration_test__pipe_reg.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module PipeRegTest (
  input logic clk,
  input logic rst,
  input logic [7:0] data_in,
  output logic [7:0] data_out
);

  logic [7:0] w;
  assign w = data_in ^ 8'd255;
  logic [7:0] delayed_stg1;
  logic [7:0] delayed_stg2;
  logic [7:0] delayed;
  always_ff @(posedge clk) begin
    if (rst) begin
      delayed_stg1 <= '0;
      delayed_stg2 <= '0;
      delayed <= '0;
    end else begin
      delayed_stg1 <= w;
      delayed_stg2 <= delayed_stg1;
      delayed <= delayed_stg2;
    end
  end
  assign data_out = delayed;

endmodule
