tests/snapshots/integration_test__pipeline_stage_inst.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module Alu #(
  parameter int T = 32
) (
  input logic [T-1:0] a,
  input logic [T-1:0] b,
  output logic [T-1:0] result
);

  assign result = T'(a + b);

endmodule

module AluPipe #(
  parameter int XLEN = 32
) (
  input logic clk,
  input logic rst,
  input logic [XLEN-1:0] op_a,
  input logic [XLEN-1:0] op_b,
  output logic [XLEN-1:0] result_out
);

  // ── Stage valid registers ──
  logic fetch_valid_r;
  logic execute_valid_r;
  
  // ── Stage data registers ──
  logic [XLEN-1:0] fetch_a_r = 0;
  logic [XLEN-1:0] fetch_b_r = 0;
  logic [XLEN-1:0] execute_alu_out = 0;
  
  // ── Pipeline control register updates ──
  always_ff @(posedge clk) begin
    if (rst) begin
      fetch_valid_r <= 1'b0;
      execute_valid_r <= 1'b0;
    end else begin
      fetch_valid_r <= 1'b1;
      execute_valid_r <= fetch_valid_r;
    end
  end
  
  // ── Synchronous/reset-free stage data updates ──
  always_ff @(posedge clk) begin
    fetch_a_r <= op_a;
    fetch_b_r <= op_b;
    execute_alu_out <= XLEN'((fetch_a_r + fetch_b_r));
    if (rst) begin
      fetch_a_r <= 0;
      fetch_b_r <= 0;
      execute_alu_out <= 0;
    end
  end
  
  // ── Combinational outputs ──
  Alu alu0 (
    .a(fetch_a_r),
    .b(fetch_b_r),
    .result(result_out)
  );

endmodule
