tests/snapshots/integration_test__pipeline_stage_inst_output_wire_type_resolved_from_port.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module Sub #(
  parameter int WIDTH = 32
) (
  input logic [WIDTH-1:0] a_in,
  output logic [WIDTH-1:0] b_out
);

  assign b_out = a_in;

endmodule

module P (
  input logic clk,
  input logic rst,
  input logic [31:0] src,
  output logic [31:0] dst
);

  // ── Stage valid registers ──
  logic s1_valid_r;
  logic s2_valid_r;
  
  // ── Stage data registers ──
  logic [31:0] s1_latched;
  logic [31:0] s1_sub_in;
  logic [31:0] s1_sub_out;
  logic [31:0] s2_captured;
  
  // ── Pipeline control register updates ──
  always_ff @(posedge clk) begin
    if (rst) begin
      s1_valid_r <= 1'b0;
      s2_valid_r <= 1'b0;
    end else begin
      s1_valid_r <= 1'b1;
      s2_valid_r <= s1_valid_r;
    end
  end
  
  // ── Synchronous/reset-free stage data updates ──
  always_ff @(posedge clk) begin
    s1_latched <= src;
    s2_captured <= s1_sub_out;
    if (rst) begin
      s1_latched <= 0;
      s2_captured <= 0;
    end
  end
  
  // ── Combinational outputs ──
  Sub #(.WIDTH(32)) sub (
    .a_in(s1_sub_in),
    .b_out(s1_sub_out)
  );
  assign s1_sub_in = s1_latched;
  assign dst = s2_captured;

endmodule
